--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
@@ -104,7 +104,7 @@
             </p:panelGrid>
             <div style="padding: 10px;">
                 <p:commandButton id="walutynowabutton" value="nowa" onclick="walutypokaz();" style="width: 120px;"/>
-                <p:commandButton id="walutydodajbutton" value="dodaj" actionListener="#{walutyViewFK.dodajnowawalute}" oncomplete="walutyschowaj();" style="width: 120px; display: none;" update=":wprowadzonewaluty:dataTablewaluty"/>
+                <p:commandButton id="walutydodajbutton" value="dodaj" actionListener="#{walutyViewFK.dodajnowawalute}" oncomplete="walutyschowaj();" style="width: 120px; display: none;" update=":wprowadzonewaluty:dataTablewaluty wpiswalut"/>
             </div>
         </h:form>
     </p:dialog>
