--- a/npkpir_23/web/wspolny/sub/importxls.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxls.xhtml
@@ -20,7 +20,7 @@
             </p:panelGrid>
        <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent"  binding="#{interpaperImportView.grid0}" >
                     <p:panelGrid columns="1" style="margin-top: 20px;">
-                        <h:outputText value="Akceptowana wersja pliku xls,xlsx, xml, epp" style="font-weight: bold;"/>
+                        <h:outputText value="Akceptowana wersja pliku xls,xlsx,xml,epp, csv" style="font-weight: bold;"/>
                         <p:fileUpload fileUploadListener="#{interpaperImportView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow akordeon5:form_importinterpaper panelplik:rodzajrach" 
