--- a/npkpir_23/web/wspolny/sub/fakturadodatki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturadodatki.xhtml
@@ -53,13 +53,14 @@
             </h:form>
             <p:separator/>
             <h:form id="listapozycji">
-                <p:panelGrid columns="4">
+                <p:panelGrid columns="5">
                     <p:commandButton value="generuj permanentne" actionListener="#{fakturaDodPozycjaKontrahentView.generujpermanentne()}" style="width: 120px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:commandButton value="zachowaj wygenerowane" actionListener="#{fakturaDodPozycjaKontrahentView.zachowajpermanentne()}" style="width: 120px;margin-left: 20px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:outputLabel for="boxczywszystkie" value="pokaż tylko puste"/>
                     <p:selectBooleanCheckbox id="boxczywszystkie" value="#{fakturaDodPozycjaKontrahentView.pokazujtylkopuste}" >
                         <p:ajax event="change" partialSubmit="true" listener="#{fakturaDodPozycjaKontrahentView.pobierzklientow()}" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista"/>
                     </p:selectBooleanCheckbox>
+                    <h:outputText value="Generowanie, nie duplikuje wpisów. Aby dodana pozycja została pobrana następnym razem, podatnik musi mieć oznaczoną okresową fakturę jako ręczna do edycji" style="color:green"/>
                 </p:panelGrid>
                 <p:growl life="3600" showDetail="true"><p:autoUpdate/></p:growl>
                 <p:dataTable  var="zapis" value="#{fakturaDodPozycjaKontrahentView.lista_2}" id="lista" sortOrder="ascending" style="width: 1630px;" widgetVar="tabelazwynikami"
