--- a/npkpir_23/web/manager/sub/fakturadodatki.xhtml
+++ b/npkpir_23/web/manager/sub/fakturadodatki.xhtml
@@ -12,7 +12,7 @@
             <h:form id="form2">
                 <p:growl life="3600" showDetail="true"/>
                 <p:panelGrid columns="5">
-                    <h:outputText value="rok"/>
+                    <h:outputText value="rokqwdwdwwdwdww"/>
                     <h:outputText value="mc"/>
                     <h:outputText value=""/>
                     <h:outputText value=""/>
@@ -53,13 +53,14 @@
             </h:form>
             <p:separator/>
             <h:form id="listapozycji">
-                <p:panelGrid columns="4">
+                <p:panelGrid columns="5">
                     <p:commandButton value="generuj permanentne" actionListener="#{fakturaDodPozycjaKontrahentView.generujpermanentne()}" style="width: 120px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:commandButton value="zachowaj wygenerowane" actionListener="#{fakturaDodPozycjaKontrahentView.zachowajpermanentne()}" style="width: 120px;margin-left: 20px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:outputLabel for="boxczywszystkie" value="pokaż tylko puste"/>
                     <p:selectBooleanCheckbox id="boxczywszystkie" value="#{fakturaDodPozycjaKontrahentView.pokazujtylkopuste}" >
                         <p:ajax event="change" partialSubmit="true" listener="#{fakturaDodPozycjaKontrahentView.pobierzklientow()}" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista"/>
                     </p:selectBooleanCheckbox>
+                    <h:outputText value="Generowanie, nie duplikuje wpisów. Aby dodana pozycja została pobrana następnym razem, podatnik musi mieć oznaczoną okresową fakturę jako ręczna do edycji. Kopiowanie do przodu w menu" style="color:green"/>
                 </p:panelGrid>
                 <p:growl life="3600" showDetail="true"><p:autoUpdate/></p:growl>
                 <p:dataTable  var="zapis" value="#{fakturaDodPozycjaKontrahentView.lista_2}" id="lista" sortOrder="ascending" style="width: 1630px;" widgetVar="tabelazwynikami"
@@ -140,7 +141,8 @@
                     </p:column>
                 </p:dataTable>
                 <p:contextMenu for="akordeon:listapozycji:lista" style="width: 250px;">
-                    <p:menuitem value="zeruj rozl." update="akordeon:listapozycji:lista" actionListener="#{fakturaDodPozycjaKontrahentView.zeruj}" icon="ui-icon-document" />
+                    <p:menuitem value="zeruj rozl.bbb" update="akordeon:listapozycji:lista" actionListener="#{fakturaDodPozycjaKontrahentView.zeruj}" icon="ui-icon-document" />
+                    <p:menuitem value="kopiuj mc. nast." update="akordeon:listapozycji:lista" actionListener="#{fakturaDodPozycjaKontrahentView.kopiuj}" icon="ui-icon-document" />
                 </p:contextMenu>
             </h:form>
             <h:form>
@@ -230,9 +232,6 @@
                         <p:commandButton icon="ui-icon-trash" actionListener="#{fakturaDodPozycjaKontrahentView.usun(zapis1)}" update="@form" rendered="#{zapis1.rozliczone eq false}"/>
                     </p:column>
                 </p:dataTable>
-                <p:contextMenu for="akordeon:listapozycji:lista" style="width: 250px;">
-                    <p:menuitem value="zeruj rozl." update="akordeon:listapozycji:lista" actionListener="#{fakturaDodPozycjaKontrahentView.zeruj}" icon="ui-icon-document" />
-                </p:contextMenu>
             </h:form>
             <h:form>
                 <p:panelGrid columns="3">
