--- a/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
+++ b/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
@@ -6,17 +6,31 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets">
-    
+
     <h:form id="formpodatnicy">
 
         <p:outputPanel>
-            <p:commandButton value="zapisz podatnicy" style="width: 200px; margin: 10px;" actionListener="#{podatnikKsiegowaShortView.zapisz}"/>
+            <p:panelGrid columns="2" style="width: 250px;">
+                <h:outputText value="rok"/>
+                <h:outputText value="mc"/>
+                <p:selectOneMenu id="rokWpisu" value="#{podatnikKsiegowaShortView.rok}" style="width: 60px;">
+                    <p:ajax event="change" partialSubmit="true"/>
+                    <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true" />
+                    <f:selectItems value="#{roki.rokiList}"/>
+                </p:selectOneMenu>
+                <p:selectOneMenu id="miesiacWpisu" value="#{podatnikKsiegowaShortView.mc}" style="width: 60px;">
+                    <p:ajax event="change" partialSubmit="true" />
+                    <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true" />
+                    <f:selectItems value="#{mce.mceList}"/>
+                </p:selectOneMenu>
+                <p:commandButton value="aktualizuj " global="true" style="width: 200px; margin: 10px;" actionListener="#{podatnikKsiegowaShortView.aktualizuj}" update="formpodatnicy:tabelapodatnicy"/>
+                <p:commandButton value="zapisz podatnicy" style="width: 200px; margin: 10px;" actionListener="#{podatnikKsiegowaShortView.zapisz}"/>
+            </p:panelGrid>
             <p:panelGrid columns="2" style="width: 1250px;">
-
                 <p:column>
-                      <p:commandButton value="XLS" >
-            <p:dataExporter type="xls" target="formpodatnicy:tabelapodatnicy" fileName="lista" />
-        </p:commandButton>
+                    <p:commandButton value="XLS" style="width: 200px;margin: 10px;">
+                        <p:dataExporter type="xls" target="formpodatnicy:tabelapodatnicy" fileName="lista" />
+                    </p:commandButton>
                     <p:dataTable id="tabelapodatnicy" value="#{podatnikKsiegowaShortView.listapodatnikow}" var="item" style="width: 1350px;" 
                                  paginatorAlwaysVisible="true" paginator="true" pageLinks="12" rows="30"
                                  rowIndexVar="index" 
@@ -41,11 +55,11 @@
                                 <p:ajax event="change" listener="#{podatnikKsiegowaShortView.edytujpodatnika(item)}" />
                             </p:selectBooleanCheckbox>
                         </p:column>
-<!--                        <p:column headerText="stare kadry" width="60" style="text-align: center;">
-                            <p:selectBooleanCheckbox value="#{item.starekadry}">
-                                <p:ajax event="change" listener="#{podatnikKsiegowaShortView.edytujpodatnika(item)}" />
-                            </p:selectBooleanCheckbox>
-                        </p:column>-->
+                        <!--                        <p:column headerText="stare kadry" width="60" style="text-align: center;">
+                                                    <p:selectBooleanCheckbox value="#{item.starekadry}">
+                                                        <p:ajax event="change" listener="#{podatnikKsiegowaShortView.edytujpodatnika(item)}" />
+                                                    </p:selectBooleanCheckbox>
+                                                </p:column>-->
                         <p:column headerText="email" width="300" style="text-align: left;">
 <!--                            <h:outputText value="#{item.email}"/>-->
                             <p:inputText value="#{item.email}" size="40">
