--- a/npkpir_23/web/admin/sub/podatnicy.xhtml
+++ b/npkpir_23/web/admin/sub/podatnicy.xhtml
@@ -88,7 +88,7 @@
             </p:rowExpansion>
         </p:dataTable>
     </p:outputPanel>
-<!--    <p:outputPanel>
+    <p:outputPanel>
         <p:commandButton value="zapisz podatnicy" style="width: 200px; margin: 10px;" actionListener="#{podatnikKsiegowaView.zapisz}"/>
         <p:dataTable value="#{podatnikKsiegowaView.listapodatnikow}" var="item" style="width: 800px;" rowIndexVar="index" 
                      filteredValue="#{podatnikKsiegowaView.listapodatnikowfilter}" sortBy="#{item.ksiegowa.grupa}"
@@ -125,5 +125,5 @@
                 </p:column>
             </p:summaryRow>
         </p:dataTable>
-    </p:outputPanel>-->
+    </p:outputPanel>
 </ui:composition>   
