--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -270,7 +270,7 @@
                             <bcf:outputpl value="#{itempasek.nettowaluta}" />
                         </p:column>
                         <p:column width="20" style="text-align: center;">
-                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="NieobecnoscListForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm:datalist"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="NieobecnoscListForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm:datalist RachunekZleceniaForm"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
