--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_karta_wynagrodzen.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_karta_wynagrodzen.xhtml
@@ -36,7 +36,7 @@
                         </f:facet>
                         <h:outputText value="#{itemkarta.mc}"/>
                     </p:column>
-                    <p:column width="100" style="text-align: center;word-break: true;">
+                    <p:column width="80" style="text-align: center;word-break: true;">
                         <f:facet name="header">
                             <h:outputText value="nr listy"/>
                         </f:facet>
@@ -72,11 +72,23 @@
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.bruttobezpodatku}" stylePlus="#{itemkarta.bruttobezpodatku eq 0 ? 'color:silver':null}"/>
                     </p:column>
+                     <p:column width="60">
+                        <f:facet name="header">
+                            <h:outputText value="podst. społ."/>
+                        </f:facet>
+                         <bcf:outputpl value="#{itemkarta.podstawaubezpieczenspolecznych}" stylePlus="#{itemkarta.podstawaubezpieczenspolecznych eq 0 ? 'color:silver':null}"/>
+                    </p:column>
                     <p:column width="60">
                         <f:facet name="header">
                             <h:outputText value="ubezp. społ."/>
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.razemspolecznepracownik}" stylePlus="#{itemkarta.razemspolecznepracownik eq 0 ? 'color:silver':null}"/>
+                    </p:column>
+                      <p:column width="60">
+                        <f:facet name="header">
+                            <h:outputText value="ubezp. społ. firma"/>
+                        </f:facet>
+                          <bcf:outputpl value="#{itemkarta.razemspolecznefirma}" stylePlus="#{itemkarta.razemspolecznefirma eq 0 ? 'color:silver':null}"/>
                     </p:column>
                     <p:column width="60">
                         <f:facet name="header">
@@ -314,6 +326,12 @@
         <p:outputPanel>
             <p:commandButton value="drukuj" style="width: 120px;" actionListener="#{kartaWynagrodzenView.drukuj}"/>
             <p:commandButton value="PIT-11" style="width: 120px;" actionListener="#{kartaWynagrodzenView.pit11}"/>
+            <p:commandButton value="druk szer." type="button" icon="pi pi-print" styleClass="shadow-1 mb-3">
+                <p:printer target="KartyWynangrodzenListForm:datalist" />
+            </p:commandButton>
+        </p:outputPanel>
+        <p:outputPanel style="margin-top: 10px;">
+            <h:outputText value="W przypadku druku tabeli szerokiej należy ręcznie zmienić orientacje strony na poziomą" style="color: green;"/>
         </p:outputPanel>
     </p:dialog>
 </ui:composition>
